feat: added table for list users and added interceptor for handle of jwt and errors
