# src/app/shared/api/services/auth.service.ts
@@ -9,14 +9,14 @@ import { BaseService } from '../base-service';
 import { ApiConfiguration } from '../api-configuration';
 import { StrictHttpResponse } from '../strict-http-response';
 
-import { apiAuthenticatePost$Json } from '../fn/auth/api-authenticate-post-json';
-import { ApiAuthenticatePost$Json$Params } from '../fn/auth/api-authenticate-post-json';
-import { apiAuthenticatePost$Plain } from '../fn/auth/api-authenticate-post-plain';
-import { ApiAuthenticatePost$Plain$Params } from '../fn/auth/api-authenticate-post-plain';
-import { apiAuthenticateRefreshTokenPost$Json } from '../fn/auth/api-authenticate-refresh-token-post-json';
-import { ApiAuthenticateRefreshTokenPost$Json$Params } from '../fn/auth/api-authenticate-refresh-token-post-json';
-import { apiAuthenticateRefreshTokenPost$Plain } from '../fn/auth/api-authenticate-refresh-token-post-plain';
-import { ApiAuthenticateRefreshTokenPost$Plain$Params } from '../fn/auth/api-authenticate-refresh-token-post-plain';
+import { apiAuthLoginPost$Json } from '../fn/auth/api-auth-login-post-json';
+import { ApiAuthLoginPost$Json$Params } from '../fn/auth/api-auth-login-post-json';
+import { apiAuthLoginPost$Plain } from '../fn/auth/api-auth-login-post-plain';
+import { ApiAuthLoginPost$Plain$Params } from '../fn/auth/api-auth-login-post-plain';
+import { apiAuthRefreshTokenPost$Json } from '../fn/auth/api-auth-refresh-token-post-json';
+import { ApiAuthRefreshTokenPost$Json$Params } from '../fn/auth/api-auth-refresh-token-post-json';
+import { apiAuthRefreshTokenPost$Plain } from '../fn/auth/api-auth-refresh-token-post-plain';
+import { ApiAuthRefreshTokenPost$Plain$Params } from '../fn/auth/api-auth-refresh-token-post-plain';
 import { ApiResponseDto } from '../models/api-response-dto';
 
 @Injectable({ providedIn: 'root' })
@@ -25,96 +25,96 @@ export class AuthService extends BaseService {
     super(config, http);
   }
 
-  /** Path part for operation `apiAuthenticatePost()` */
-  static readonly ApiAuthenticatePostPath = '/api/authenticate';
+  /** Path part for operation `apiAuthLoginPost()` */
+  static readonly ApiAuthLoginPostPath = '/api/auth/login';
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `apiAuthenticatePost$Plain()` instead.
+   * To access only the response body, use `apiAuthLoginPost$Plain()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticatePost$Plain$Response(params?: ApiAuthenticatePost$Plain$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
-    return apiAuthenticatePost$Plain(this.http, this.rootUrl, params, context);
+  apiAuthLoginPost$Plain$Response(params?: ApiAuthLoginPost$Plain$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
+    return apiAuthLoginPost$Plain(this.http, this.rootUrl, params, context);
   }
 
   /**
    * This method provides access only to the response body.
-   * To access the full response (for headers, for example), `apiAuthenticatePost$Plain$Response()` instead.
+   * To access the full response (for headers, for example), `apiAuthLoginPost$Plain$Response()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticatePost$Plain(params?: ApiAuthenticatePost$Plain$Params, context?: HttpContext): Observable<ApiResponseDto> {
-    return this.apiAuthenticatePost$Plain$Response(params, context).pipe(
+  apiAuthLoginPost$Plain(params?: ApiAuthLoginPost$Plain$Params, context?: HttpContext): Observable<ApiResponseDto> {
+    return this.apiAuthLoginPost$Plain$Response(params, context).pipe(
       map((r: StrictHttpResponse<ApiResponseDto>): ApiResponseDto => r.body)
     );
   }
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `apiAuthenticatePost$Json()` instead.
+   * To access only the response body, use `apiAuthLoginPost$Json()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticatePost$Json$Response(params?: ApiAuthenticatePost$Json$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
-    return apiAuthenticatePost$Json(this.http, this.rootUrl, params, context);
+  apiAuthLoginPost$Json$Response(params?: ApiAuthLoginPost$Json$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
+    return apiAuthLoginPost$Json(this.http, this.rootUrl, params, context);
   }
 
   /**
    * This method provides access only to the response body.
-   * To access the full response (for headers, for example), `apiAuthenticatePost$Json$Response()` instead.
+   * To access the full response (for headers, for example), `apiAuthLoginPost$Json$Response()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticatePost$Json(params?: ApiAuthenticatePost$Json$Params, context?: HttpContext): Observable<ApiResponseDto> {
-    return this.apiAuthenticatePost$Json$Response(params, context).pipe(
+  apiAuthLoginPost$Json(params?: ApiAuthLoginPost$Json$Params, context?: HttpContext): Observable<ApiResponseDto> {
+    return this.apiAuthLoginPost$Json$Response(params, context).pipe(
       map((r: StrictHttpResponse<ApiResponseDto>): ApiResponseDto => r.body)
     );
   }
 
-  /** Path part for operation `apiAuthenticateRefreshTokenPost()` */
-  static readonly ApiAuthenticateRefreshTokenPostPath = '/api/authenticate/refresh-token';
+  /** Path part for operation `apiAuthRefreshTokenPost()` */
+  static readonly ApiAuthRefreshTokenPostPath = '/api/auth/refresh-token';
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `apiAuthenticateRefreshTokenPost$Plain()` instead.
+   * To access only the response body, use `apiAuthRefreshTokenPost$Plain()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticateRefreshTokenPost$Plain$Response(params?: ApiAuthenticateRefreshTokenPost$Plain$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
-    return apiAuthenticateRefreshTokenPost$Plain(this.http, this.rootUrl, params, context);
+  apiAuthRefreshTokenPost$Plain$Response(params?: ApiAuthRefreshTokenPost$Plain$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
+    return apiAuthRefreshTokenPost$Plain(this.http, this.rootUrl, params, context);
   }
 
   /**
    * This method provides access only to the response body.
-   * To access the full response (for headers, for example), `apiAuthenticateRefreshTokenPost$Plain$Response()` instead.
+   * To access the full response (for headers, for example), `apiAuthRefreshTokenPost$Plain$Response()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticateRefreshTokenPost$Plain(params?: ApiAuthenticateRefreshTokenPost$Plain$Params, context?: HttpContext): Observable<ApiResponseDto> {
-    return this.apiAuthenticateRefreshTokenPost$Plain$Response(params, context).pipe(
+  apiAuthRefreshTokenPost$Plain(params?: ApiAuthRefreshTokenPost$Plain$Params, context?: HttpContext): Observable<ApiResponseDto> {
+    return this.apiAuthRefreshTokenPost$Plain$Response(params, context).pipe(
       map((r: StrictHttpResponse<ApiResponseDto>): ApiResponseDto => r.body)
     );
   }
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `apiAuthenticateRefreshTokenPost$Json()` instead.
+   * To access only the response body, use `apiAuthRefreshTokenPost$Json()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticateRefreshTokenPost$Json$Response(params?: ApiAuthenticateRefreshTokenPost$Json$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
-    return apiAuthenticateRefreshTokenPost$Json(this.http, this.rootUrl, params, context);
+  apiAuthRefreshTokenPost$Json$Response(params?: ApiAuthRefreshTokenPost$Json$Params, context?: HttpContext): Observable<StrictHttpResponse<ApiResponseDto>> {
+    return apiAuthRefreshTokenPost$Json(this.http, this.rootUrl, params, context);
   }
 
   /**
    * This method provides access only to the response body.
-   * To access the full response (for headers, for example), `apiAuthenticateRefreshTokenPost$Json$Response()` instead.
+   * To access the full response (for headers, for example), `apiAuthRefreshTokenPost$Json$Response()` instead.
    *
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
-  apiAuthenticateRefreshTokenPost$Json(params?: ApiAuthenticateRefreshTokenPost$Json$Params, context?: HttpContext): Observable<ApiResponseDto> {
-    return this.apiAuthenticateRefreshTokenPost$Json$Response(params, context).pipe(
+  apiAuthRefreshTokenPost$Json(params?: ApiAuthRefreshTokenPost$Json$Params, context?: HttpContext): Observable<ApiResponseDto> {
+    return this.apiAuthRefreshTokenPost$Json$Response(params, context).pipe(
       map((r: StrictHttpResponse<ApiResponseDto>): ApiResponseDto => r.body)
     );
   }
